--- a/implementations-comparison/package.json
+++ b/implementations-comparison/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fs-extra": "^9.0.0"
+    "fs-extra": "^9.0.0",
+    "minimist": "^1.2.5"
   }
 }
